--- a/app1.ipynb
+++ b/app1.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " * Running on http://127.0.0.1:8050/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/Dec/2018 09:34:12] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [03/Dec/2018 09:34:13] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [03/Dec/2018 09:34:13] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [03/Dec/2018 09:34:14] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [03/Dec/2018 09:34:14] \"GET /favicon.ico HTTP/1.1\" 200 -\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-42-c50f4e500159>, line 88)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-c50f4e500159>\"\u001b[0;36m, line \u001b[0;32m88\u001b[0m\n\u001b[0;31m    def update_graph(xaxis_column_name, yaxis_column_name, xaxis_type, yaxis_type, year_value):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -25,15 +21,16 @@
     "import plotly.graph_objs as go\n",
     "import pandas as pd\n",
     "\n",
-    "app.css.append_css({\"external_url\": \"https://codepen.io/chriddyp/pen/bWLwgP.css\"})\n",
-    "\n",
     "app = dash.Dash(__name__)\n",
     "server = app.server\n",
     "\n",
+    "app.css.append_css({\"external_url\": \"https://codepen.io/chriddyp/pen/bWLwgP.css\"})\n",
     "\n",
     "df = pd.read_csv(\n",
     "    'FinalProjectData.csv')\n",
+    "\n",
     "available_indicators = df['NA_ITEM'].unique()\n",
+    "available_countries=df['GEO'].unique()\n",
     "\n",
     "app.layout = html.Div([\n",
     "    html.Div([\n",
@@ -57,39 +54,56 @@
     "            dcc.Dropdown(\n",
     "                id='yaxis-column',\n",
     "                options=[{'label': i, 'value': i} for i in available_indicators],\n",
-    "                value='Value added, gross'\n",
-    "            ),\n",
+    "                value='Value added, gross'),\n",
     "            dcc.RadioItems(\n",
     "                id='yaxis-type',\n",
     "                options=[{'label': i, 'value': i} for i in ['Linear', 'Log']],\n",
     "                value='Linear',\n",
     "                labelStyle={'display': 'inline-block'}\n",
-    "            )\n",
-    "        ],style={'width': '48%', 'float': 'right', 'display': 'inline-block'})\n",
-    "    ]),\n",
+    "            )],\n",
+    "            style={'width': '48%', 'float': 'right', 'display': 'inline-block'}),\n",
     "\n",
     "    dcc.Graph(id='indicator-graphic'),\n",
-    "\n",
-    "    dcc.Slider(\n",
+    "        \n",
+    "        dcc.Slider(\n",
     "        id='year--slider',\n",
     "        min=df['TIME'].min(),\n",
     "        max=df['TIME'].max(),\n",
     "        value=df['TIME'].max(),\n",
     "        step=None,\n",
     "        marks={str(year): str(year) for year in df['TIME'].unique()}\n",
-    "    )\n",
-    "])\n",
+    "        )\n",
+    "    ]),\n",
+    "    html.Div([\n",
     "\n",
+    "        html.Div([\n",
+    "            dcc.Dropdown(\n",
+    "                id='xaxis-column2',\n",
+    "                options=[{'label': i, 'value': i} for i in available_countries],\n",
+    "                value='Belgium'\n",
+    "            )],\n",
+    "        style={'width': '48%', 'display': 'inline-block'}),\n",
+    "\n",
+    "        html.Div([\n",
+    "            dcc.Dropdown(\n",
+    "                id='yaxis-column2',\n",
+    "                options=[{'label': i, 'value': i} for i in available_indicators],\n",
+    "                value='Value added, gross'\n",
+    "            )],\n",
+    "            style={'width': '48%', 'float': 'right', 'display': 'inline-block'}),\n",
+    "\n",
+    "        dcc.Graph(id='indicator-graphic2')\n",
+    "    ])\n",
+    " \n",
     "@app.callback(\n",
     "    dash.dependencies.Output('indicator-graphic', 'figure'),\n",
     "    [dash.dependencies.Input('xaxis-column', 'value'),\n",
-    "     dash.dependencies.Input('yaxis-column', 'value'),\n",
-    "     dash.dependencies.Input('xaxis-type', 'value'),\n",
-    "     dash.dependencies.Input('yaxis-type', 'value'),\n",
-    "     dash.dependencies.Input('year--slider', 'value')])\n",
-    "def update_graph(xaxis_column_name, yaxis_column_name,\n",
-    "                 xaxis_type, yaxis_type,\n",
-    "                 year_value):\n",
+    "    dash.dependencies.Input('yaxis-column', 'value'),\n",
+    "    dash.dependencies.Input('xaxis-type', 'value'),\n",
+    "    dash.dependencies.Input('yaxis-type', 'value'),\n",
+    "    dash.dependencies.Input('year--slider', 'value')])\n",
+    "    \n",
+    "def update_graph(xaxis_column_name, yaxis_column_name, xaxis_type, yaxis_type, year_value):\n",
     "    dff = df[df['TIME'] == year_value]\n",
     "    \n",
     "    return {\n",
@@ -117,10 +131,50 @@
     "            hovermode='closest'\n",
     "        )\n",
     "    }\n",
+    "@app.callback(\n",
+    "    dash.dependencies.Output('indicator-graphic2', 'figure'),\n",
+    "    [dash.dependencies.Input('xaxis-column2', 'value'),\n",
+    "     dash.dependencies.Input('yaxis-type2', 'value')])\n",
+    "def update_graph(xaxis_column_name, yaxis_column_name,\n",
+    "                 year_value):\n",
+    "    dff = df[df['TIME'] == year_value]\n",
+    "    \n",
+    "    return {\n",
+    "        'data': [go.Scatter( \n",
+    "            y=dff[dff['NA_ITEM'] == yaxis_column_name]['Value'],\n",
+    "            text=dff[dff['NA_ITEM'] == yaxis_column_name]['GEO'],\n",
+    "            mode='lines',\n",
+    "            marker={\n",
+    "                 \n",
+    "                'size': 15,\n",
+    "                'opacity': 0.5,\n",
+    "                'line': {'width': 0.5, 'color': 'white'}\n",
+    "            }\n",
+    "        )],\n",
+    "        'layout': go.Layout(\n",
+    "            xaxis={\n",
+    "                'title': xaxis_column_name,\n",
+    "                'type': 'linear' if xaxis_type == 'Linear' else 'log'\n",
+    "            },\n",
+    "            yaxis={\n",
+    "                'title': yaxis_column_name,\n",
+    "                'type': 'linear' if yaxis_type == 'Linear' else 'log'\n",
+    "            },\n",
+    "            margin={'l': 40, 'b': 40, 't': 10, 'r': 0},\n",
+    "            hovermode='closest'\n",
+    "        )\n",
+    "    }\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
